RESOLVED FIXED102755
DISALLOW_COPY_AND_ASSIGN is not a WebKit macro
https://bugs.webkit.org/show_bug.cgi?id=102755
Summary DISALLOW_COPY_AND_ASSIGN is not a WebKit macro
Adam Barth
Reported 2012-11-19 17:46:47 PST
DISALLOW_COPY_AND_ASSIGN is not a WebKit macro
Attachments
Patch (1.85 KB, patch)
2012-11-19 17:47 PST, Adam Barth
no flags
Patch (1.85 KB, patch)
2012-11-19 17:47 PST, Adam Barth
no flags
Adam Barth
Comment 1 2012-11-19 17:47:17 PST
Adam Barth
Comment 2 2012-11-19 17:47:44 PST
Adam Barth
Comment 3 2012-11-19 17:48:24 PST
Adam Barth
Comment 4 2012-11-19 17:52:29 PST
Comment on attachment 175102 [details] Patch Clearing flags on attachment: 175102 Committed r135219: <http://trac.webkit.org/changeset/135219>
Adam Barth
Comment 5 2012-11-19 17:52:31 PST
All reviewed patches have been landed. Closing bug.
Alec Flett
Comment 6 2012-11-19 21:19:39 PST
That is scary that it compiles.. this is a chromium macro, headers must be bleeding in somehow.
Adam Barth
Comment 7 2012-11-19 23:43:25 PST
I think it might have been coming from v8.h somehow.
Note You need to log in before you can comment on or make changes to this bug.