DISALLOW_COPY_AND_ASSIGN is not a WebKit macro https://bugs.webkit.org/show_bug.cgi?id=102755

Reviewed by Sam Weinig.

WTF_MAKE_NONCOPYABLE is the idiom we use in WebKit.  I don't understand
how this compiles.

* Modules/indexeddb/IDBBackingStore.h:
(RecordIdentifier):


Canonical link: https://commits.webkit.org/120888@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135219 268f45cc-cd09-0410-ab3c-d52691b4dbfc